--- a/Server/.env
+++ b/Server/.env
@@ -3,5 +3,5 @@ CLOUDINARY_API_KEY = "772446557861916"
 CLOUDINARY_SECRET_KEY = "QqDRm1pDAT8kc5o9GYS1UZkTIdQ"
 CLOUDINARY_NAME = "dsh0cdv5w"
 JWT_SECRET = "harini"
-ADMIN_EMAIL = "demo@harini@gmail.com"
+ADMIN_EMAIL = "demoharini@gmail.com"
 ADMIN_PASSWORD = "demo12345"
